parser/src/snapshots/squawk_parser__parse__tests__create_foriegn_table_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreateForeignTableStmt(
                    Object({
                        "base": Object({
                            "oncommit": String(
                                "ONCOMMIT_NOOP",
                            ),
                            "relation": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    22,
                                ),
                                "relname": String(
                                    "films",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                            "tableElts": Array([
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "code",
                                        ),
                                        "constraints": Array([
                                            Object({
                                                "Constraint": Object({
                                                    "contype": String(
                                                        "CONSTR_NOTNULL",
                                                    ),
                                                    "location": Number(
                                                        54,
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            34,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                46,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "bpchar",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                            "typmods": Array([
                                                Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            51,
                                                        ),
                                                        "val": Object({
                                                            "Integer": Object({
                                                                "ival": Number(
                                                                    5,
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            ]),
                                        }),
                                    }),
                                }),
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "title",
                                        ),
                                        "constraints": Array([
                                            Object({
                                                "Constraint": Object({
                                                    "contype": String(
                                                        "CONSTR_NOTNULL",
                                                    ),
                                                    "location": Number(
                                                        92,
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            68,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                80,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "varchar",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                            "typmods": Array([
                                                Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            88,
                                                        ),
                                                        "val": Object({
                                                            "Integer": Object({
                                                                "ival": Number(
                                                                    40,
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            ]),
                                        }),
                                    }),
                                }),
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "did",
                                        ),
                                        "constraints": Array([
                                            Object({
                                                "Constraint": Object({
                                                    "contype": String(
                                                        "CONSTR_NOTNULL",
                                                    ),
                                                    "location": Number(
                                                        126,
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            106,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                118,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "int4",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                }),
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "date_prod",
                                        ),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            140,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                152,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "date",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                }),
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "kind",
                                        ),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            162,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                174,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "varchar",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                            "typmods": Array([
                                                Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            182,
                                                        ),
                                                        "val": Object({
                                                            "Integer": Object({
                                                                "ival": Number(
                                                                    10,
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            ]),
                                        }),
                                    }),
                                }),
                                Object({
                                    "ColumnDef": Object({
                                        "colname": String(
                                            "len",
                                        ),
                                        "is_local": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            191,
                                        ),
                                        "typeName": Object({
                                            "location": Number(
                                                203,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "interval",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                            "typmods": Array([
                                                Object({
                                                    "A_Const": Object({
                                                        "location": Number(
                                                            212,
                                                        ),
                                                        "val": Object({
                                                            "Integer": Object({
                                                                "ival": Number(
                                                                    3072,
                                                                ),
                                                            }),
                                                        }),
                                                    }),
                                                }),
                                            ]),
                                        }),
                                    }),
                                }),
                            ]),
                        }),
                        "servername": String(
                            "film_server",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    247,
                ),
            },
        ),
    ],
)
