parser/src/snapshots/squawk_parser__parse__tests__create_function_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateFunctionStmt(
                Object({
                    "funcname": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "populate",
                                ),
                            }),
                        }),
                    ]),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "List": Object({
                                        "items": Array([
                                            Object({
                                                "String": Object({
                                                    "str": String(
                                                        "\nDECLARE\n    -- declarations\nBEGIN\n    PERFORM my_function();\nEND;\n",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "as",
                                ),
                                "location": Number(
                                    44,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "plpgsql",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "language",
                                ),
                                "location": Number(
                                    119,
                                ),
                            }),
                        }),
                    ]),
                    "returnType": Object({
                        "location": Number(
                            36,
                        ),
                        "names": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "pg_catalog",
                                    ),
                                }),
                            }),
                            Object({
                                "String": Object({
                                    "str": String(
                                        "int4",
                                    ),
                                }),
                            }),
                        ]),
                        "typemod": Number(
                            -1,
                        ),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                135,
            ),
        },
    ],
)
