parser/src/snapshots/squawk_parser__parse__tests__create_index_without_index_name.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: IndexStmt(
                    IndexStmt {
                        access_method: "btree",
                        idxname: None,
                        index_params: [
                            IndexElem(
                                IndexElem {
                                    name: Some(
                                        "bar",
                                    ),
                                    expr: None,
                                    indexcolname: None,
                                    collation: None,
                                    opclass: [],
                                    ordering: Default,
                                    nulls_ordering: Default,
                                },
                            ),
                        ],
                        relation: RangeVar {
                            catalogname: None,
                            schemaname: None,
                            relname: "foo",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 16,
                        },
                        concurrent: false,
                        unique: false,
                        primary: false,
                        isconstraint: false,
                        deferrable: false,
                        initdeferred: false,
                        transformed: false,
                        if_not_exists: false,
                        table_space: None,
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    24,
                ),
            },
        ),
    ],
)
