parser/src/snapshots/squawk_parser__parse__tests__create_publication_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CreatePublicationStmt(
                    Object({
                        "pubname": String(
                            "mypublication",
                        ),
                        "tables": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        44,
                                    ),
                                    "relname": String(
                                        "users",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        51,
                                    ),
                                    "relname": String(
                                        "departments",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    62,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: CreatePublicationStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "insert",
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "publish",
                                    ),
                                    "location": Number(
                                        122,
                                    ),
                                }),
                            }),
                        ]),
                        "pubname": String(
                            "insert_only",
                        ),
                        "tables": Array([
                            Object({
                                "RangeVar": Object({
                                    "inh": Bool(
                                        true,
                                    ),
                                    "location": Number(
                                        105,
                                    ),
                                    "relname": String(
                                        "mydata",
                                    ),
                                    "relpersistence": String(
                                        "p",
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 63,
                stmt_len: Some(
                    78,
                ),
            },
        ),
    ],
)
