parser/src/snapshots/squawk_parser__parse__tests__do_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: DoStmt(
                    Object({
                        "args": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "DECLARE r record;\nBEGIN\n    FOR r IN SELECT table_schema, table_name FROM information_schema.tables\n             WHERE table_type = \'VIEW\' AND table_schema = \'public\'\n    LOOP\n        EXECUTE \'GRANT ALL ON \' || quote_ident(r.table_schema) || \'.\' || quote_ident(r.table_name) || \' TO webuser\';\n    END LOOP;\nEND",
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "as",
                                    ),
                                    "location": Number(
                                        4,
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    318,
                ),
            },
        ),
    ],
)
